kubernetes/apps/default/prowlarr/app/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: prowlarr
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`prowlarr.f9.casa`)
      kind: Rule
      services:
        - name: prowlarr
          port: 80
      middlewares:
        - name: default-headers
          namespace: traefik
        - name: authentik
          namespace: security
